feature(*): add brand entity

--- a/src/tobeto2A.RentACar/WebAPI/appsettings.Development.json
+++ b/src/tobeto2A.RentACar/WebAPI/appsettings.Development.json
@@ -9,7 +9,7 @@
   },
 
   "ConnectionStrings": {
-    "BaseDb": ""
+    "BaseDb": "Data Source=(localdb)\\MSSQLLocalDB; Initial Catalog=RentACar2A"
   },
 
   "CacheSettings": {
