payment & mail etc..

--- a/src/tobeto2A.RentACar/Infrastructure/Infrastructure.csproj
+++ b/src/tobeto2A.RentACar/Infrastructure/Infrastructure.csproj
@@ -5,7 +5,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CloudinaryDotNet" Version="1.25.1" />
+    <PackageReference Include="CloudinaryDotNet" Version="1.26.2" />
+    <PackageReference Include="Iyzipay" Version="2.1.61" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Application\Application.csproj" />
